# notgull_dot_net

./: README.md
auth_server/: .env  .gitignore  Cargo.toml  notgull-auth.toml
auth_server/forms/: login.html
auth_server/migrations/2021-12-26-195024_create_user_table/: down.sql  up.sql
auth_server/src/: auth_data.rs  authorize.rs  config.rs  database.rs  forms.rs  hashing.rs  login.rs  main.rs  mock_database.rs  models.rs  query.rs  schema.rs  send_token.rs  state_table.rs  tokens.rs  verify.rs
backend/: .env  .env.swp  .gitignore  Cargo.toml  notgull.pem  notgull.rsa  notgull.toml
backend/migrations/2021-12-16-165631_create_blogposts_and_users/: down.sql  up.sql
backend/src/: blog.rs  config.rs  csrf.rs  database.rs  error_page.rs  frontpages.rs  http_client.rs  main.rs  markdown.rs  mock_database.rs  models.rs  pagerender.rs  query.rs  routes.rs  schema.rs  serve.rs  templates.rs
backend/src/admin/: mod.rs  user.rs
backend/src/api/: image.rs  mod.rs  model.rs  set_username.rs
backend/src/auth/: mod.rs  oauth.rs  username_form.rs
backend/templates/: about_me.md  adminconsole.html.jinja  base.html.jinja  blogcreate.html.jinja  blogdelete.html.jinja  blogedit.html.jinja  bloglist.html.jinja  blogpost.html.jinja  contact_me.md  error.html.jinja  frontpage.html.jinja  homepage.html.jinja  userinfo.html.jinja  userlist.html.jinja  usernameform.html.jinja
frontend/: gulpfile.js  package.json  tsconfig.json  webpack.config.js
frontend/src/: api.ts  blogcreate.tsx  blogedit.tsx  blogpost_editor.tsx  consts.ts  debounced_search.tsx  deletepost.tsx  frontpage.tsx  image_uploader.tsx  index.ts  listblogpost.tsx  loading.tsx  models.ts  navlink.ts  pagination.tsx  rss.ts  rss_display.tsx  user_info.tsx  user_list.tsx  usernameform.tsx  util.ts
frontend/src/blogpostlist/: index.tsx  listitem.tsx
frontend/style/: style.scss
mock_oauth2/: Cargo.toml
mock_oauth2/src/: authorize.rs  constants.rs  main.rs  random.rs  token.rs
scripts/: docker-compose.yml  launch-dev-env.py  test.yml
