[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.3.2", features = ["password-hash"] }
async-trait = "0.1.52"
bytes = "1.1.0"
chrono = "0.4.19"
dashmap = "5.0.0"
data-encoding = "2.3.2"
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
futures-util = "0.3.19"
getrandom = "0.2.3"
jsonwebtoken = "7.2.0"
oauth2 = "4.1.0"
once_cell = "1.9.0"
password-hash = { version = "0.3.2", features = ["alloc", "std"] }
rand_core = { version = "0.6.3", features = ["std"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_urlencoded = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
toml = "0.5.8"
tracing = "0.1.29"
uuid = "0.8.2"
warp = { version = "0.3.2", features = ["tls"] }
