[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
async-trait = "0.1.52"
aws-config = "0.3.0"
aws-sdk-s3 = "0.3.0"
aws-smithy-http = "0.33.1"
bytes = "1.1.0"
cfg-if = "1.0.0"
chrono = "0.4.19"
comrak = { version = "0.12.1", features = ["syntect"] }
csrf = "0.4.1"
dashmap = "5.0.0"
data-encoding = "2.3.2"
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = { version = "0.9.0", features = ["atty", "termcolor"], default-features = false }
futures-util = "0.3.17"
jsonwebtoken = "7.2.0"
notify = "4.0.17"
oauth2 = { version = "4.1.0", default-features = false }
once_cell = "1.9.0"
parking_lot = "0.11.2"
reqwest = { version = "0.11.7", features = ["rustls-tls"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
serde_urlencoded = "0.7.0"
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
toml = "0.5.8"
tracing = { version = "0.1.29", features = ["log-always"] }
tracing-subscriber = "0.3.3"
walkdir = "2.3.2"
warp = { version = "0.3.2", features = ["tls"] }

[dev-dependencies]
multipart = "0.18.0"
percent-encoding = "2.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
