[package]
name = "mock_oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
dashmap = "5.0.0"
data-encoding = "2.3.2"
futures-util = "0.3.19"
getrandom = "0.2.3"
jsonwebtoken = "7.2.0"
once_cell = "1.9.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_urlencoded = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
warp = { version = "0.3.2", features = ["tls"] }
